Sistema de detección automática de dispositivos implementado - Nuevo index.html como detector principal que redirige automáticamente - desktop.html (versión PC) y mobile.html (versión móvil) - Agregados todos los productos de Amor y Amistad (productos 2-24) con precios correctos - Actualizado vercel.json para manejar redirecciones - Detección inteligente por User Agent, tamaño de pantalla y capacidades táctiles

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "destination": "/mobile.html"
     },
     {
+      "source": "/desktop",
+      "destination": "/desktop.html"
+    },
+    {
       "source": "/",
       "destination": "/index.html"
     }
