RESTAURAR index.html original - Restaurado el contenido original completo del index.html - Creado detector.html separado para el detector de dispositivos - Eliminado desktop.html innecesario - Actualizado vercel.json para manejar detector.html - El index.html ahora tiene todo el contenido original de la página principal

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "destination": "/mobile.html"
     },
     {
-      "source": "/desktop",
-      "destination": "/desktop.html"
+      "source": "/detector",
+      "destination": "/detector.html"
     },
     {
       "source": "/",
